# sasc

./: .gitignore  CMakeLists.txt  README.md  grammar.ebnf
.github/workflows/: test.yml
src/: AST.cpp  AST.hpp  IR.cpp  IR.hpp  Lexer.cpp  Lexer.hpp  Object.cpp  Object.hpp  common.hpp  main.cpp  types.cpp  types.hpp
src/backend/: Backend.cpp  Backend.hpp
src/backend/riscv32/: Backend_RV32.cpp  Backend_RV32.hpp
src/frontend/: AST.cpp  AST.hpp
src/utils/: CliParser.cpp  CliParser.hpp  common.cpp  common.hpp  error.cpp  error.hpp  logging.cpp  logging.hpp  settings.cpp  settings.hpp
testing/: TESTING.md  run_tests.py
testing/tests/00main/: implicit_ret0.sasc  ret0i32.sasc  ret0u32.sasc  ret100i32.sasc  ret100u32.sasc  ret1i32.sasc  ret1u32.sasc  ret_0i32.sasc  ret_0i32_expr.sasc  ret_0u32.sasc  ret_0u32_expr.sasc  ret_100i32.sasc  ret_100i32_expr.sasc  ret_100u32.sasc  ret_100u32_expr.sasc  ret_1i32.sasc  ret_1i32_expr.sasc  ret_1u32.sasc  ret_1u32_expr.sasc  ret_void.sasc  ret_void_implicit.sasc
testing/tests/00main/errors/: invalid_ret_syntax_1.sasc  invalid_ret_syntax_2.sasc  main_missing_body.sasc  wrong_ret_type_1.sasc  wrong_ret_type_2.sasc
